@startuml
skinparam dpi 300

allow_mixing
hide empty members
left to right direction
!define exception(name) class name << (E,#FFAAAA) >>

node Postgres as postgres <<5434>> {
    database "villaines-database" as db
}

node Quarkus as quarkus <<8084>> {
    package "villain-api" as villainapi {
        entity Villain
        class VillainApplication
        class VillainApplicationLifeCycle
        class VillainResource
        class VillainService
        artifact "index<U+002E>html" as index
        artifact "application<U+002E>properties" as properties
        artifact "import<U+002E>sql" as import
        package "health" {
            class DatabaseConnectionHealthCheck
            class PingVillainResourceHealthCheck
            DatabaseConnectionHealthCheck .[hidden].> PingVillainResourceHealthCheck
        }
        VillainResource ..> VillainService
        VillainResource .> Villain
        VillainApplication .[hidden].> VillainApplicationLifeCycle
        properties .[hidden].> import
        Villain .[hidden].> index
    }
}

package "tests" as tests {
    class VillainResourceTest
    class NativeVillainResourceIT
}

quarkus ....> postgres
villainapi .[hidden].> tests

@enduml
